fix remote errors